# hamidiyesim

./: .gitignore  CLAUDE_MASTER_PROMPT.md  ENTEGRASYON_TARET.md  README.md  requirements.txt
control/: __init__.py  arm_diag.py  cessna_pose_relay.py  chase_algorithm.py  drone_functions.py  fix_accel_bias.py  gcs_server.py  harmonic_pose_relay.py  mav_common.py  net_turret_node.py  plane_functions.py  plane_patterns.py  px4_shell.py  run_drone_hover.py  run_drone_square.py  run_drone_takeoff.py  run_dual_demo.py  run_plane_aggressive.py  run_plane_arm.py  run_plane_scenario.py  run_plane_square.py  strike_algorithm.py
control/gcs_ui/: index.html  script.js  style.css
control/guidance/: __init__.py  adapter_copter.py  adapter_fixedwing.py  common.py  gps_approach.py  gps_chase.py  gps_strike.py  guidance_core.py  supervisor.py  visual_guidance.py  visual_lead.py
docs/: ARDUPILOT_MIGRATION.md  COLAB_TRAINING.md  GUIDANCE_ROADMAP.md  SIMULASYON_CALISTIRMA.md
plugins/: .gitignore  CMakeLists.txt  NetCapturePlugin.cc  NetCapturePlugin.hh  NetLauncherPlugin.cc  NetLauncherPlugin.hh
ros/: net_turret.launch.py  net_turret_bridge.yaml
scripts/: fire_net.py  restart_gcs.sh  setup_mission_planner.sh  start_ardupilot_sitl.sh  start_harmonic.sh  start_mission_planner.sh  turret_aim.py
sim/ardupilot/: copter_avci.parm
tests/: test_visual_lead.py
vision/: capture_dataset.py  capture_negatives.py  capture_pose_dataset.py  capture_runway_negatives.py  color_detector.py  detection_state.py  detector.py  geometry.py  pose_detector.py  train_yolo.py  train_yolo_pose.py
(+11 files in other folders)
